css/style.css
@import url('https://fonts.googleapis.com/css2?family=Boldonse&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
}

body {
    width: 100vw;
    height: 100vh;
    background-image: url(https://i.pinimg.com/1200x/d8/cc/bb/d8ccbbe2e1d9241df5287a43321c9074.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
}

.container {
    width: 350px;
    border-radius: 15px;
    border: 1px solid rgba(255, 255, 255, 0.212);
    padding: 25px;
    color: white;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.459);
    transition: all 1s cubic-bezier(0.37, 0.46, 0, 1.04);
    max-height: 95px;
    position: relative;
}

.container::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(20px);
    z-index: -1;
}

.searchbar input {
    position: relative;
    padding: 10px 36px;
    width: 100%;
    border-radius: 10px;
    background:none;
    border: 0;
    color: white;
}

.searchbar {
    position: relative;
    width: 100%;
    border: 1px solid rgba(255, 255, 255, 0.212);
    border-radius: 11px;
    z-index: 1;
}

#recent-search {
    position: absolute;
    top: 45px;
    width: 100%;
    backdrop-filter: blur(10px);
    border: 1px solid rgba(255, 255, 255, 0.212);
    border-radius: 10px;
}

#recent-search button img {
    width: 6%;
}

#recent-search button{
    display: flex;
    align-items: center;
    gap: 10px;
    padding: 5px 10px;
    background:none;
    border: 0;
    color: white;
    cursor: pointer;
}

#recent-search button:hover{
    background-color: rgba(255, 255, 255, 0.1);
}

.searchbar input:focus-visible {
    outline: 0;
}

.searchbar .search{
    position: absolute;
    top:10px;
    left: 10px;
    width: 20px;
}

.searchbar .location{
    position: absolute;
    top:10px;
    right: 10px;
    width: 19px;
    cursor: pointer;
    transition: all 1s cubic-bezier(0, 0.63, 0.42, 1.39);
}

#recent-search{
    visibility: hidden;
}

.searchbar:focus-within #recent-search{
    visibility: visible;
}

.searchbar img:nth-of-type(2):hover {
    transform: scale(1.1);
}

.img-status img {
    margin-top: 10px;
    width: 200px;
    image-rendering: -webkit-optimize-contrast;
    filter: contrast(130%) brightness(105%)
} 

.extraData img{
    width: 30px;
}

.extraData {
    width: 100%;
    justify-content: space-around;
}

.status p {
    font-weight: 700;
}

.extraData .details {
    font-size: 13px;
    font-weight: 500;
}

